# myworkspace-config

Python/: pyproject.toml  pyproject.toml.poetry  pyproject.toml.rye  setup_gpu.sh  setup_python.sh  setup_ubuntu.sh
Python/.devcontainer/: Dockerfile  devcontainer.json
