[tool.poetry]
name = "”
version = "0.1.0"
description = ""
authors = ["RyuseiIshida <serys9469.japan@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9"


[tool.poetry.dev-dependencies]
pyproject-flake8 = "^0.0.1-alpha.4"
flake8-bugbear = "^22.4.25"
flake8-docstrings = "^1.6.0"
black = {extras = ["jupyter"], version = "^22.6.0"}
isort = "^5.10.1"
mypy = "^0.942"
pytest = "^7.1.1"
jupyter = "^1.0.0"
notebook = "^6.4.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py39']
line-length = 120

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
known_local_folder=['config',]

[tool.flake8]
max-line-length = 120
max-complexity = 18
ignore = "E203,E266,W503,"

[tool.mypy]
python_version = "3.9"
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests",]
filterwarnings = ["ignore::DeprecationWarning",]
